--- a/vignettes/Chi_Procedure.Rmd
+++ b/vignettes/Chi_Procedure.Rmd
@@ -77,7 +77,7 @@ head(samplePrFile)
 **將 ICD-PCS code 的格式統一轉成 Decimal**
 
 ```{r, message = FALSE, warning = FALSE}
-decimal <- IcdPrShortToDecimal(PrDataFile = samplePrFile,
+decimal <- icdPrShortToDecimal(prDataFile = samplePrFile,
                                icdColName = ICD, 
                                dateColName = Date,
                                icd10usingDate = "2015/10/01")
@@ -86,7 +86,7 @@ head(decimal$ICD)
 **將 ICD-PCS code 的格式統一轉成 Short**
 
 ```{r, message = FALSE, warning = FALSE}
-short <- IcdPrDecimalToShort(PrDataFile = samplePrFile,
+short <- icdPrDecimalToShort(prDataFile = samplePrFile,
                              icdColName = ICD, 
                              dateColName = Date,
                              icd10usingDate = "2015/10/01")
@@ -111,11 +111,11 @@ head(short$ICD)
 
 **1) 單一階層分類**
 
-`IcdPrToCCS` 可取得處置編碼相對應的 CCS 分類(CCS Category)及分類之敘述  
+`icdPrToCCS` 可取得處置編碼相對應的 CCS 分類(CCS Category)及分類之敘述  
 ICD-9-PCS 和 ICD-10-PCS 的ccs單一階層一致：共231種
 ```{r, message = FALSE, warning = FALSE}
 ## ICD to CCS category
-CCS <- IcdPrToCCS(PrDataFile = samplePrFile,
+CCS <- icdPrToCCS(prDataFile = samplePrFile,
                   idColName = ID,
                   icdColName = ICD,        
                   dateColName = Date,
@@ -127,14 +127,14 @@ head(CCS$groupedDT, 5)
 
 **2) 多階層分類**
 
-`IcdPrToCCSLvl` 可取得處置編碼相對應的 CCS 多階層分類 (Multiple ccs level) 及分類之敘述
+`icdPrToCCSLvl` 可取得處置編碼相對應的 CCS 多階層分類 (Multiple ccs level) 及分類之敘述
 
 * ICD-9-PCS 共 3個階層 (Level 1~3)  
 * ICD-10-PCS 共 2個階層 (Level 1~2)  
 
 ```{r, message = FALSE, warning = FALSE}
 ## ICD to CCS multiple level 2 description
-CCSLvl <- IcdPrToCCSLvl(PrDataFile = samplePrFile,
+CCSLvl <- icdPrToCCSLvl(prDataFile = samplePrFile,
                        idColName = ID,
                        icdColName = ICD,        
                        dateColName = Date,
@@ -153,7 +153,7 @@ head(CCSLvl$groupedDT, 5)
  4. Major Therapeutic：需在手術室執行之治療類處置  
  
 ```{r, message = FALSE, warning = FALSE}
-ProcedureClass <- IcdPrToProcedureClass(PrDataFile = samplePrFile,
+ProcedureClass <- icdPrToProcedureClass(prDataFile = samplePrFile,
                                         idColName = ID,
                                         icdColName = ICD,      
                                         dateColName = Date,
